fix: bugs of visibility
fix the bugs

--- a/client/src/main/resources/CSS/GameScreen.css
+++ b/client/src/main/resources/CSS/GameScreen.css
@@ -75,3 +75,6 @@
 .table-view .scroll-bar{
     -fx-background-color: transparent;
 }
+.radio-button {
+    -fx-cursor: hand;
+}
